<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="40dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonsStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutNumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:hintEnabled="false"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="0dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="0dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineButtonsStart">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"

            android:includeFontPadding="false"
            android:inputType="numberSigned"
            android:lines="1"
            android:maxLength="4"

            android:maxLines="1"
            android:minHeight="0dp"
            android:minLines="1"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingBottom="0dp"
            android:saveEnabled="false"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:text="@string/data_empty"
            android:textSize="24sp"

            android:textStyle="bold"
            app:autoSizeTextType="uniform" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/buttonContainerNumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/guidelineButtonsStart"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonUpNumber"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/label_plus"
            android:textStyle="bold"

            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="5sp"
            app:autoSizeMaxTextSize="150sp"
            app:autoSizeStepGranularity="1sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDownNumber"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/label_minus"
            android:textStyle="bold"

            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="5sp"
            app:autoSizeMaxTextSize="150sp"
            app:autoSizeStepGranularity="1sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>