<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/rootRollKeep"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/safeAreaRoot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/headerRnK"
            layout="@layout/view_activity_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/includeResultPanel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <include
            android:id="@+id/includeResultPanel"
            layout="@layout/results_panel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/guidelineResultAndInputRnk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerRnK" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineResultAndInputRnk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/panelRollInputRnk"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            app:layout_constraintBottom_toTopOf="@id/guidelineInputAndChancesRnk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineResultAndInputRnk">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lineRollNum"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/lineBonusAndTickRnk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/labelRollNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/label_rnk_roll"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/includeRollNumStepper"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <include
                    android:id="@+id/includeRollNumStepper"
                    layout="@layout/number_stepper"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="12dp"
                    android:minWidth="80dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/labelKeepNum"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@id/labelRollNum"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/labelKeepNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/label_rnk_keep"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/includeKeepNumStepper"
                    app:layout_constraintStart_toEndOf="@id/includeRollNumStepper"
                    app:layout_constraintTop_toTopOf="parent" />

                <include
                    android:id="@+id/includeKeepNumStepper"
                    layout="@layout/number_stepper"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="6dp"
                    android:minWidth="80dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@id/labelKeepNum"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lineBonusAndTickRnk"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lineRollNum">

                <TextView
                    android:id="@+id/labelBonusNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/label_modifier"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/includeBonusNumStepper"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <include
                    android:id="@+id/includeBonusNumStepper"
                    layout="@layout/number_stepper"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="12dp"
                    android:minWidth="80dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/guidelineBonusAndChecksRnk"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@id/labelBonusNum"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineBonusAndChecksRnk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.6" />

                <TextView
                    android:id="@+id/labelExplodeTensRnK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/label_check_explode_tens"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/labelExplodeOnesRnK"
                    app:layout_constraintEnd_toStartOf="@id/checkBoxExplodeTensRnK"
                    app:layout_constraintStart_toEndOf="@id/guidelineBonusAndChecksRnk"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/checkBoxExplodeTensRnK"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:checked="true"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text=""
                    app:layout_constraintBottom_toTopOf="@id/checkBoxExplodeOnesRnK"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/labelExplodeTensRnK"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/labelExplodeOnesRnK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/label_check_explode_ones"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/checkBoxExplodeOnesRnK"
                    app:layout_constraintStart_toEndOf="@id/guidelineBonusAndChecksRnk"
                    app:layout_constraintTop_toBottomOf="@id/labelExplodeTensRnK" />

                <CheckBox
                    android:id="@+id/checkBoxExplodeOnesRnK"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:checked="false"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text=""
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/labelExplodeOnesRnK"
                    app:layout_constraintTop_toBottomOf="@id/checkBoxExplodeTensRnK" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineInputAndChancesRnk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lineChancesAndRollButtonRnk"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineInputAndChancesRnk">

            <include
                android:id="@+id/includeChancesRnk"
                layout="@layout/success_chance_panel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/includeRollButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/includeRollButton"
                layout="@layout/view_roll_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/includeChancesRnk"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>